# etf-trading-project

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  docker-compose.dev.yml  docker-compose.yml  start.sh  status.sh  stop.sh  문제점.md
data-scraping/: AGENTS.md  db_service.py  pyproject.toml  tradingview_playwright_scraper_upload.py
docs/: architecture.md  (+1 more)
etf-model/: .env.example  .gitignore  2020.submission.csv  2021.submission.csv  2022.submission.csv  2023.submission.csv  2024.submission.csv  CLAUDE.md  Final_Baseline.ipynb  PIPELINE_IMPLEMENTATION_SUMMARY.md  get_latest_scores.py  get_scores.py  model_comparison.csv  nohup.out  organize_submissions.py  pyproject.toml  requirements.txt  run_benchmark.sh  run_experiment.py  run_tuning_experiment.py  score_grid_search.py  tmp.py
etf-model/.claude/: settings.json
etf-model/docs/: competition-rule.md
etf-model/notebooks/: train_and_submit.ipynb
etf-model/results/: grid_search_2020_20260113_130827.csv  grid_search_2020_20260113_130827.json  grid_search_2020_interim_20260113_130827.json  grid_search_scores_20260114_012938.csv  grid_search_scores_interim.csv  grid_search_summary_20260114_012938.json  tuning_experiment_2020_20260113_124912.json
etf-model/scripts/: download_ahnlab_data.py
etf-model/src/: __init__.py  config.py  ensemble_pipeline.py  experiment_pipeline.py  tabpfn_pipeline_v2.py
etf-model/submissions/: 2021.submission.csv  2021.tabpfn.submission.csv  2021.tabpfn_v2.20260112_101634.submission.csv  2022.submission.csv  2022.tabpfn.submission.csv  2023.tabpfn.submission.csv  2023.tabpfn_v2.20260112_101634.submission.csv  2024.elasticnet.20260112_191348.submission.csv  2024.ridge.20260112_174601.submission.csv  2024.submission.csv  (+1 more)
(+244 files in other folders)
