[project]
name = "etf-model"
version = "0.1.0"
description = ""
authors = [
    {name = "woochang4862",email = "woochang4862@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "lightgbm (>=4.0.0)",
    "scikit-learn (>=1.3.0)",
    "optuna (>=3.0.0)",
    "xgboost (>=2.0.0)",
    "catboost (>=1.2.0)",
    "torch (>=2.0.0)",
    "ta (>=0.10.0)",
    "finance-datareader (>=0.9.0)",
    "tqdm (>=4.65.0)",
    "joblib (>=1.3.0)",
    "jupyter (>=1.0.0)",
    "ipykernel (>=6.0.0)",
    "yfinance (>=0.2.30)",
    "fredapi (>=0.5.1)",
    "pandas-ta (>=0.3.14b0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "tabpfn (>=6.3.2,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
